// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout - LeftMenu renders activeItem "/" correctly 1`] = `
<div
  className="MuiPaper-root HookGlobalStyles-leftMenuContainer-1 MuiPaper-elevation1 MuiPaper-rounded"
  style={
    Object {
      "width": 92,
    }
  }
>
  <ul
    className="MuiList-root HookGlobalStyles-menu-2 MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <div
          className="MuiBox-root MuiBox-root-8"
        >
          <svg
            data-file-name="SvgLogo"
            fill="#3f51b5"
            height={40}
            width={40}
          />
        </div>
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h1 MuiTypography-colorPrimary MuiTypography-displayBlock"
        >
          PORTAL
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button Mui-selected"
      href="/"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_overview"
          fill="#3f51b5"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-displayBlock"
        >
          common:overview
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/wallets"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_wallet_manage"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:wallet manage
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/delegate"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_delegate_08"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:delegate
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/market"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_market"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:market
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/proposals"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_proposal"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:proposals
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/address-book"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_address_book"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:address book
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/explorer"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_explorer"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:explorer
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </a>
  </ul>
</div>
`;

exports[`component: Layout - LeftMenu renders no matching activeItem correctly 1`] = `
<div
  className="MuiPaper-root HookGlobalStyles-leftMenuContainer-1 MuiPaper-elevation1 MuiPaper-rounded"
  style={
    Object {
      "width": 92,
    }
  }
>
  <ul
    className="MuiList-root HookGlobalStyles-menu-2 MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <div
          className="MuiBox-root MuiBox-root-7"
        >
          <svg
            data-file-name="SvgLogo"
            fill="#3f51b5"
            height={40}
            width={40}
          />
        </div>
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h1 MuiTypography-colorPrimary MuiTypography-displayBlock"
        >
          PORTAL
        </span>
      </div>
    </div>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_overview"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:overview
        </span>
      </div>
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/wallets"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_wallet_manage"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:wallet manage
        </span>
      </div>
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/delegate"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_delegate_08"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:delegate
        </span>
      </div>
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/market"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_market"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:market
        </span>
      </div>
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/proposals"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_proposal"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:proposals
        </span>
      </div>
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/address-book"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_address_book"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:address book
        </span>
      </div>
    </a>
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-3 MuiListItem-gutters MuiListItem-button"
      href="/explorer"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          data-file-name="SvgIcon_explorer"
          fill="#e0e0e0"
          height={24}
          width={24}
        />
      </div>
      <div
        className="MuiListItemText-root"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:explorer
        </span>
      </div>
    </a>
  </ul>
</div>
`;
